--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,6 +1,11 @@
-// Logo Colors
-$logo_pink: #d62970;
-$logo_purple: #9900e0;
-$logo_orange: #ea4e24;
-$logo_blue: #0070cc;
-$logo_yellow: #c9a321;
+// Base Colors
+$base_bg: #ECECEC;
+$par_color: #696969;
+$footer_par_color: #9D9D9D;
+
+
+//gradient background color//
+$grad_1: #b721ff;
+$grad_2: rgba(250, 112, 154, 0.8);
+$grad_3: #21d4fd;
+
