--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,11 +1,13 @@
 // Base Colors
 $base_bg: #ECECEC;
-$par_color: #696969;
-$footer_par_color: #9D9D9D;
+$dark_text_color: #696969;
+$light_text_color: #9D9D9D;
 
 
 //gradient background color//
 $grad_1: #b721ff;
 $grad_2: rgba(250, 112, 154, 0.8);
 $grad_3: #21d4fd;
+$color-black: #000;
+$color-white: #fff;
 
