--- a/sass/modules/_skills.scss
+++ b/sass/modules/_skills.scss
@@ -1,11 +1,18 @@
 #skills {
-
   grid-column: center-start / center-end;
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr)); // Rows will be implicit, no need to specify. Auto-fit to make it responsive.
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(25rem, 1fr)
+  ); // Rows will be implicit, no need to specify. Auto-fit to make it responsive.
   grid-gap: 6rem;
   align-items: start;
+
+  // desktop size media queries at 1200px
+  @media screen and (min-width: 1200px) {
+    grid-gap: 0rem;
+  }
 
   h3 {
     font-size: 2rem;
@@ -13,17 +20,23 @@
 }
 
 .skill {
-
   display: grid;
-  grid-template-columns: /*icon width*/min-content /*heading width*/1fr;
+  grid-template-columns: /*icon width*/ min-content /*heading width*/ 1fr;
   grid-row-gap: 1.5rem;
   grid-column-gap: 1.5rem;
+
 
   p {
     font-size: 1.2rem;
     color: $dark_text_color;
     margin-right: 4rem;
     text-align: center;
+
+    // tablet size media queries at 700px
+    @media screen and (min-width: 700px) {
+      text-align: left;
+    }
+    
   }
 
   &__icon {
@@ -39,9 +52,8 @@
   }
 
   &:last-child {
-  margin-bottom: 10rem;
-}
-
+    margin-bottom: 10rem;
+  }
 }
 
 // icons
