--- a/sass/modules/_hero.scss
+++ b/sass/modules/_hero.scss
@@ -12,8 +12,34 @@
   border-radius: 6px;
   height: 50rem;
 
+  // desktop size media queries at 700px
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(
+        to right bottom,
+        rgba($base_bg, 0.6),
+        rgba($base_bg, 0.9)
+      ),
+      url(../../images/homepage_bg.jpg);
+    height: 100vh;
+  }
+
   h3 {
     font-size: 2.7rem;
+
+    // mobile LANDSCAPE media queries
+    @media screen and (min-device-width: 320px) and (orientation: landscape) {
+      font-size: 1.4rem;
+    }
+
+    // tablet size media queries at 700px
+    @media screen and (min-width: 700px) {
+      font-size: 2.4rem;
+    }
+
+    // desktop size media queries at 700px
+    @media screen and (min-width: 1200px) {
+      font-size: 6rem;
+    }
   }
 
   &__logo {
@@ -24,6 +50,16 @@
     left: 0;
     right: 0;
     margin: auto;
+
+    @media screen and (min-device-width: 320px) and (orientation: landscape) {
+      width: 25%;
+      top: 8rem;
+    }
+
+    // desktop size media queries at 1200px
+    @media screen and (min-width: 1200px) {
+      top: 14rem;;
+    }
   }
 
   &__text-box {
@@ -33,8 +69,23 @@
     transform: translate(-50%, -50%);
     text-align: center;
     text-transform: uppercase;
-    font-size: 1.6rem;
     border-bottom: 2px solid $color_black;
+
+    // mobile LANDSCAPE media queries
+    @media screen and (min-device-width: 320px) and (orientation: landscape) {
+      top: 65%;
+    }
+
+    // tablet size media queries at 700px
+    @media screen and (min-width: 700px) {
+      top: 40%;
+    }
+
+    // desktop size media queries at 1200px
+    @media screen and (min-width: 1200px) {
+      top: 60%;
+      border-bottom: 6px solid $color_black;
+    }
 
     span {
       margin-right: 0.6rem;
@@ -51,8 +102,33 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
+    // tablet size media queries at 700px
+    @media screen and (min-width: 700px) {
+      top: 45%;
+    }
+
+    // Tablet LANDSCAPE media queries
+    @media screen and (min-device-width: 700px) and (orientation: landscape) {
+      top: 50%;
+    }
+
+    // desktop size media queries at 1200px
+    @media screen and (min-width: 1200px) {
+      top: 80%;
+    }
+
     p {
       margin-top: 2rem;
+
+      // Tablet LANDSCAPE media queries
+      @media screen and (min-device-width: 700px) and (orientation: landscape) {
+        font-size: 1.4rem;
+      }
+
+      // desktop size media queries at 700px
+      @media screen and (min-width: 1200px) {
+        font-size: 2.4rem;
+      }
     }
   }
 }
