--- a/sass/modules/_team.scss
+++ b/sass/modules/_team.scss
@@ -1,4 +1,19 @@
 #team {
+  &_members {
+    // tablet size media queries at 700px
+    @media screen and (min-width: 700px) {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      grid-column-gap: 1.5rem;
+      margin: 0 5rem;
+    }
+
+    // Tablet LANDSCAPE media queries
+    @media screen and (min-device-width: 700px) and (orientation: landscape) {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+
   h2 {
     margin-bottom: 2rem;
     font-size: 2.8rem;
@@ -26,6 +41,16 @@
   box-shadow: 0 5px 18px rgba(0, 0, 0, 0.6);
   cursor: pointer;
   transition: 0.5s;
+
+  // mobile LANDSCAPE media queries
+  @media screen and (min-device-width: 320px) and (orientation: landscape) {
+    left: 8.4rem;
+  }
+
+  // desktop size media queries at 1200px
+  @media screen and (min-width: 1200px) {
+    left: 25rem;
+  }
 
   .card-image {
     position: absolute;
@@ -97,7 +122,6 @@
     color: #000;
     text-transform: uppercase;
     margin-top: 0.6rem;
-
 
     .job-title {
       font-size: 1rem;
